# point-cloud-read

./: .gitignore  CMakeLists.txt  README.md  idl.thrift
app/scripts/: point-cloud-dump.xml
include/: PCR_IDL.h
src/: idl.thrift  main.cpp
